@@ -1,3 +1,7 @@
+2002-07-24  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily, lily/include: Rename line to system.  Junk _l suffix.
+
 2002-07-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* po/fr.po: update from TP.
